<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@null"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/div"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundbutton"
        android:text="@string/div_symbol"
        android:textColor="#C3832E"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/parentheses"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <Button
        android:id="@+id/adjustColor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/adjust_symbol"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/parentheses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/parentheses"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="@string/parent"
        android:textAlignment="center"
        android:textColor="#C3832E"
        android:textSize="45sp"
        android:textStyle="normal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/adjustColor"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/clear"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="C"
        android:textColor="#830202"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/adjustColor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/substract"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundbutton"
        android:text="@string/minus"
        android:textColor="#C3832E"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/mult" />

    <Button
        android:id="@+id/five"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundbutton"
        android:text="5"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundbutton"
        android:text="6"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/substract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/four"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="4"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/mult"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundbutton"
        android:text="@string/mult"
        android:textColor="#C3832E"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/substract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/nine"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="9"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/mult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/parentheses" />

    <Button
        android:id="@+id/seven"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="7"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/eight"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="8"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/adjustColor" />

    <Button
        android:id="@+id/plus"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundbutton"
        android:text="@string/plus"
        android:textColor="#C3832E"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/substract" />

    <Button
        android:id="@+id/two"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="2"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="3"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/one"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/roundbutton"
        android:text="1"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/mathSym"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/zero"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundbutton"
        android:text="0"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mathSym"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/dot"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundbutton"
        android:text="."
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/equal"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundbuttontwo"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="@color/roundColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@android:drawable/ic_input_delete"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_delete"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/texteditor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/mathSym"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/roundbutton"
        android:text="@string/square_root_symbol"
        android:textColor="@color/roundColortwo"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/recover"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:background="@color/black"
        android:insetTop="0dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/reanswer"
        android:textAlignment="center"
        android:textColor="@color/roundColortwo"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>